// Copyright Â© 2020 The Things Industries B.V.

syntax = "proto3";

package tti.lorawan.v3;

import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "go.thethings.network/lorawan-stack/v3/pkg/ttipb";

message AuthenticationProviderIdentifiers {
  string provider_id = 1 [(gogoproto.customname) = "ProviderID", (validate.rules).string = {pattern: "^[a-z0-9](?:[-]?[a-z0-9]){2,}$" , max_len: 36}];
}

message AuthenticationProvider {
  AuthenticationProviderIdentifiers ids = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (validate.rules).message.required = true];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];

  string name = 4 [(validate.rules).string.max_len = 50];
  bool allow_registrations = 5;

  message OIDC {
    string client_id = 1 [(gogoproto.customname) = "ClientID"];
    string client_secret = 2 [(gogoproto.customname) = "ClientSecret"];
    string provider_url = 3 [(gogoproto.customname) = "ProviderURL", (validate.rules).string.uri = true];
  };

  message Configuration {
    oneof provider {
      option (validate.required) = true;

      OIDC oidc = 1 [(gogoproto.customname) = "OIDC"];
    }
  };
  Configuration configuration = 6;
}
